style(styles): enhance body styles with line-height and letter-spacing for better readability style(styles): change background-blend-mode to difference for improved visual effect style(styles): adjust link hover state to remove text decoration for cleaner appearance fix(svg): update fill color in tlp-grind.svg for better contrast and visibility

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -42,10 +42,12 @@ body {
 	font-size: clamp(16px, round(up, 3vw, 2px), 24px);
 	font-weight: 400;
 	color: var(--c-primary);
+	line-height: 1.8;
+	letter-spacing: 0.01rem;
 	background:
 		no-repeat fixed top 0 right 0.625em / 55% url(/images/tlp-grind.svg),
 		var(--c-bg-primary);
-	background-blend-mode: normal;
+	background-blend-mode: difference;
 	font-family:
 		'Work Sans', 'Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans',
 		'Noto Sans JP', 'BIZ UDPGothic', sans-serif;
@@ -58,7 +60,7 @@ body {
 			no-repeat fixed top 0 right 0.625em / 55% url(/images/tlp-grind.svg),
 			repeat fixed 0% 0% / auto url(/images/noise.svg),
 			var(--c-bg-primary);
-		background-blend-mode: normal, hard-light;
+		background-blend-mode: difference, hard-light;
 	}
 }
 
@@ -78,10 +80,11 @@ address {
 
 a {
 	color: var(--c-accent-blue);
+	text-underline-offset: calc((1lh - 1cap) / 2 / 3);
 
 	@media (hover: hover) {
 		&:hover {
-			color: var(--c-accent-red);
+			text-decoration: none;
 		}
 	}
 
